--- a/index.html
+++ b/index.html
@@ -4,24 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Recipe</title>
+
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Project Recipe</h1>
-
-    <ul>
-      <li>
-        <a href="recipes/mac-and-cheese.html">Chilli Dog Mac and Cheese</a>
-      </li>
-      <li>
-        <a href="recipes/chicken-carbonara.html">
-          Chicken Carbonara Pasta bake
-        </a>
-      </li>
-      <li>
-        <a href="recipes/ham-potato-broccoli-casserole.html">
-          Ham, Potato and Broccoli Casserole
-        </a>
-      </li>
-    </ul>
+    <header>
+      <h1 class="heading">Project Recipe</h1>
+    </header>
+    <main>
+      <nav class="index-nav">
+        <h2>Recipes</h2>
+        <ul class="links">
+          <li>
+            <a href="recipes/mac-and-cheese.html">Chilli Dog Mac and Cheese</a>
+          </li>
+          <li>
+            <a href="recipes/chicken-carbonara.html">
+              Chicken Carbonara Pasta bake
+            </a>
+          </li>
+          <li>
+            <a href="recipes/ham-potato-broccoli-casserole.html">
+              Ham, Potato and Broccoli Casserole
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </main>
   </body>
 </html>
