--- a/recipes/ham-potato-broccoli-casserole.html
+++ b/recipes/ham-potato-broccoli-casserole.html
@@ -4,58 +4,100 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Recipe</title>
+
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
-    <a href="../index.html">Home</a>
-    <h1>Ham, Potato and Broccoli Casserole</h1>
-    <p>
-      recipe of: Sherly @
-      <a
-        href="https://www.allrecipes.com/recipe/25644/ham-potato-and-broccoli-casserole/"
-      >
-        Allrecipe
-      </a>
-    </p>
-    <img
-      src="../img/ham-potato-and-broccoli-casserole.webp"
-      alt="Ham, potato and broccoli casserole"
-      width="600"
-      height="400"
-    />
-    <p>
-      This is a great, easy to make, and nutritious casserole. You can add some
-      macaroni pasta or try seasoning the potatoes before you bake. Put this
-      dish in the freezer and bake whenever you're too lazy to cook! Can also be
-      made with leftover cooked chicken.
-    </p>
-
-    <p>Prep Time: 5mins</p>
-    <p>Cook Time: 40mins</p>
-    <p>Total Time: 45mins</p>
-    <p>Serving: 5</p>
-    <p>Yeild: 4 to 6</p>
-
-    <h2>Ingredients</h2>
-    <ul>
-      <li>1 (16 ounce) package frozen French fries</li>
-      <li>1 (16 ounce) package frozen chopped broccoli</li>
-      <li>1 ½ cups cooked, cubed ham</li>
-      <li>1 (10.75 ounce) can condensed cream of mushroom soup</li>
-      <li>1 (10.75 ounce) can milk</li>
-      <li>¼ cup mayonnaise</li>
-      <li>1 cup grated Parmesan cheese</li>
-    </ul>
-    <h2>Directions</h2>
-    <ol>
-      <li>Preheat oven to 375 degrees F (190 degrees C).</li>
-      <li>
-        Spray a 9x13 inch baking dish with cooking spray. Cover bottom of dish
-        with layer of French fries. Add a layer of broccoli, then sprinkle ham
-        evenly over broccoli. In a small bowl mix together soup, milk and
-        mayonnaise. Pour mixture evenly over ingredients in baking dish and
-        sprinkle with cheese.
-      </li>
-      <li>Bake uncovered in preheated oven for 40 minutes.</li>
-    </ol>
+    <header>
+      <div class="recipe-title">
+        <div>
+          <h1 class="recipe-name">Ham, Potato and Broccoli Casserole</h1>
+          <p class="credit-text">
+            recipe of: Sherly @
+            <a
+              href="https://www.allrecipes.com/recipe/25644/ham-potato-and-broccoli-casserole/"
+            >
+              Allrecipe
+            </a>
+          </p>
+        </div>
+        <a class="link-to-home" href="../index.html">&lt; Return Home</a>
+      </div>
+      <div class="recipe-info">
+        <img
+          src="../img/ham-potato-and-broccoli-casserole.webp"
+          alt="Ham, potato and broccoli casserole"
+          width="600"
+          height="400"
+        />
+        <p class="description">
+          This is a great, easy to make, and nutritious casserole. You can add
+          some macaroni pasta or try seasoning the potatoes before you bake. Put
+          this dish in the freezer and bake whenever you're too lazy to cook!
+          Can also be made with leftover cooked chicken.
+        </p>
+      </div>
+    </header>
+    <main>
+      <aside>
+        <table>
+          <thead>
+            <caption>
+              Serving Time
+            </caption>
+            <tr>
+              <th>Prep</th>
+              <th>Cook</th>
+              <th>Total</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>5 mins</td>
+              <td>40 mins</td>
+              <td>45 mins</td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <tr>
+              <th>Serving</th>
+              <th colspan="2">Yeild</th>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td colspan="2">4 to 6</td>
+            </tr>
+          </tfoot>
+        </table>
+      </aside>
+      <section class="main-section">
+        <div class="ingredients">
+          <h2>Ingredients</h2>
+          <ul>
+            <li>1 (16 ounce) package frozen French fries</li>
+            <li>1 (16 ounce) package frozen chopped broccoli</li>
+            <li>1 ½ cups cooked, cubed ham</li>
+            <li>1 (10.75 ounce) can condensed cream of mushroom soup</li>
+            <li>1 (10.75 ounce) can milk</li>
+            <li>¼ cup mayonnaise</li>
+            <li>1 cup grated Parmesan cheese</li>
+          </ul>
+        </div>
+        <div class="directions">
+          <h2>Directions</h2>
+          <ol>
+            <li>Preheat oven to 375 degrees F (190 degrees C).</li>
+            <li>
+              Spray a 9x13 inch baking dish with cooking spray. Cover bottom of
+              dish with layer of French fries. Add a layer of broccoli, then
+              sprinkle ham evenly over broccoli. In a small bowl mix together
+              soup, milk and mayonnaise. Pour mixture evenly over ingredients in
+              baking dish and sprinkle with cheese.
+            </li>
+            <li>Bake uncovered in preheated oven for 40 minutes.</li>
+          </ol>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
